Bypass sonar deploy issue